- removed margin from css - wrapped subtitle with h4 - added spaces around '=' and ',' - fixed presentation problem with calculate integral \int \left(x^2+ax-3\right)^2dx

--- a/share/spice/symbolab/symbolab.css
+++ b/share/spice/symbolab/symbolab.css
@@ -1,8 +1,3 @@
-.zci--symbolab .c-base__title {
-    overflow: visible;
-    margin: 0.8em 0;
-}
-
 .zci--symbolab sup{
     top: 0em;
 }
